# gomoku-cnn-mcts

./: .gitignore  Dockerfile  GAME_CONFIG.txt  README.md  alphazero.py  config.yaml  game.py  pyproject.toml  setup_linux.sh  setup_linux_uv.sh
10x10/: Dockerfile  alphazero.py  alphazero_utilize.py  aphazero_utilized.py  api_server.py  api_server_utilized.py  config.yaml  game.py  requirements.txt
3x3/: api_server.py  create_simple_nn.py  ml_game.py  mlp.ipynb  simple_neural_network.py  test_api.py
3x3/mlp_py/: mlp.py
5x5/: Dockerfile  alphazero.py  api_server.py  example.env  game_4ch.py  requirements.txt  train_nets.py
web/: UNIFIED_INTERFACE.md  index.html  proxy_server.py  start_all_servers.sh
