[project]
name = "tictactoe-cnn-mcts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "magic-wormhole>=0.21.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pygame>=2.6.1",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
    "wormhole>=0.1.0",
    "category-encoders>=2.9.0",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.2",
]
